AC_INIT(tictactoe, 0.7.2, nick.cardullo@gmail.com)
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_LANG([C++])
AC_PROG_CXX
AC_CHECK_HEADERS([iostream cstdlib ctime],[],AC_MSG_ERROR([Your system is missing required header files.]))
AC_CONFIG_SRCDIR(Game.cpp)
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
